opam-version: "2.0"
maintainer: "Leonid Rozenberg <leonidr@gmail.com>"
authors: "Leonid Rozenberg <leonidr@gmail.com>"
homepage: "https://github.com/rleonid/bau/"
dev-repo: "git+https://github.com/rleonid/bau.git"
bug-reports: "https://github.com/rleonid/bau/issues"
license: "Apache2"

build: [
  [ "jbuilder" "subst"] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs "@install"]
]

depends: [
  "ocaml"     { >= "4.04" }
  "cppo"      { build }
  "jbuilder"  { build & >= "1.0+beta16" }
  "bigarray_fold_ppx" { build }
]
